# code-noodling

./: .gitignore  CMakeLists.txt  OSE.c  OSE_CUDA.cc  README.md  dice roll improved.cpp  dice_cpu.cc  dice_roll_with_physX.cpp  die_mesh.h  maya_dice.py  physx_dice.cpp  physx_dice_multi.cpp  readme.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: code-change.yml
docs/engineering/: AES-SEC-001-waivers.md  SECURE-C-CXX.md
